# learn

./: .gitignore
docker/auto_python_project/: docker-compose.yml  pyproject.toml
docker/auto_python_project/docker/backend/: dev.Dockerfile
docker/auto_python_project/src/app/: main.py
py_pytest/: pyproject.toml  pytest.ini
py_pytest/tests/pytest_mocker/: test_mock.py
py_pytest/tests/testdata/: test_response.py
py_pytest/tests/unittest_mock/: main.py  test_mock_object.py
py_pytest/tests/unittest_mock/my_calendar/: main.py  test.py
python/: HakerRank.py  log_to_sql.py  pyproject.toml  python_basic.py  swagger.pets.yaml  tmo2.py  tmp.py
python/_ya/: README.md  main.py
python/_ya/codewars/: digital_root.py  template.py
python/_ya/context/: generate_brackets.py  readme.md
python/_ya/interview/: 2023-06-15.py
python/_ya/leetcode/: tmp.py
python/_ya/leetcode/alg/: can_place_flowers.py  template.py
python/_ya/public/: anogramm_index.py
python/_ya/youtube/: template.py
python/_ya/youtube/lecture1/: max_word_v1.py  max_word_v2.py  max_word_v3.py  square_uravnenie.py
python/book-simple-python/: test.py
python/book-simple-python/templates/: flask2.html
python/core/_asyncio/: basic.py
python/core/_corutine/: main.py  run_three.py
python/core/_generators/: example.py  movies_period.py
python/core/_iterations/: cycle_iterator.py  range_example.py
python/core/_multiprocessing/: _queue.py  main.py
python/core/_socket/: no_blocked_server.py  no_blocked_server2.py  server.py  server2.py
python/core/_threading/: main.py  race.py
python/from_work_video/: test.py
python/from_work_video/dataclasses/: main.py
python/from_work_video/ex_numpy/: ex_numpy.py
python/from_work_video/tg_bot/: main.py  test_webhook.py
python/modules/_BeatifulSoap/: main.py  shikimori.py
python/pkg/_alembic/: docker-compose.yaml  settings.py
python/pkg/_dotenv/: main.py
python/pkg/_jinja/: main.py
python/pkg/_logging/: app.py  dict_format.py  log_config.py  module1.py
python/pkg/_pydantic/: response_headers.py  validate_and_transform.py
python/pkg/_pytest/: cli_log.py
python/pkg/_schedule/: main.py  main2.py
python/tmp/: script.py  test.py  text.txt
python/web/: uri_with_query.py
python_linters/: pyproject.toml
python_linters/_mypy/: dto.py  format.py
(+122 files in other folders)
