[tool.poetry]
name = "python-linters"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]
readme = "README.md"
packages = [{include = "python_linters"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
